--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^6.12.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "prisma": "^6.12.0"
   },
   "devDependencies": {
