--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ DB_PORT=
 DB_USERNAME=
 DB_PASSWORD=
 DB_NAME=
+
+DATABASE_URL="mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}"
